用户相关结束