@@ -1,361 +1,487 @@
 package untiy.ServciceTest;
-import com.baomidou.mybatisplus.core.conditions.query.QueryWrapper;
-import com.baomidou.mybatisplus.core.metadata.IPage;
-import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 
+import com.baomidou.mybatisplus.core.metadata.IPage;
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.ArgumentCaptor;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.MockedStatic;
-import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.security.access.AccessDeniedException;
-import org.springframework.security.crypto.password.PasswordEncoder;
-import untiy.converter.SysUserConverter;
+import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.test.annotation.Rollback;
+import org.springframework.transaction.annotation.Transactional;
+
 import untiy.entity.RegisterDTO;
 import untiy.entity.SysUser;
 import untiy.entity.dto.SysUserDTO;
 import untiy.exception.EIException;
-import untiy.exception.ErrorConfig;
-import untiy.mapper.SysUserMapper;
-import untiy.security.DataScopeHelper;
-import untiy.security.FieldMaskHelper;
 import untiy.security.LoginUserDetails;
-import untiy.service.impl.SysUserServiceImpl;
-import untiy.utils.MPUtil;
+import untiy.service.AuthorService;
+import untiy.service.SysUserService;
 
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.mockito.ArgumentMatchers.*;
-import static org.mockito.Mockito.*;
-@ExtendWith(MockitoExtension.class)
+import static org.mockito.ArgumentMatchers.anyLong;
+import static org.mockito.Mockito.when;
+
+@SpringBootTest
+@Transactional
+@Rollback
 class SysUserServiceImplTest {
 
-    @Mock
-    private SysUserMapper sysUserMapper;
+    @Autowired
+    private SysUserService sysUserService;
 
-    @Mock
-    private SysUserConverter sysUserConverter;
+    @MockBean
+    private AuthorService authorService;
 
-    @Mock
-    private PasswordEncoder passwordEncoder;
-
-    @InjectMocks
-    private SysUserServiceImpl sysUserService;
-
-    private LoginUserDetails mockViewer;
+    private static final String TEST_USERNAME = "test_2026001";
+    private static final String TEST_PASSWORD = "123456";
 
     @BeforeEach
     void setUp() {
-        mockViewer = mock(LoginUserDetails.class);
+        // 清理可能残留的测试数据
+        cleanupUser(TEST_USERNAME);
+        for (int i = 1; i <= 3; i++) {
+            cleanupUser(TEST_USERNAME + "_" + i);
+        }
+
+        // Mock AuthorService，避免真实数据库查询权限
+        when(authorService.getAuthoritiesByUserId(anyLong()))
+                .thenReturn(Collections.singletonList(new SimpleGrantedAuthority("ROLE_ADMIN")));
+
+        // 默认以超管身份登录（effectiveLevel=0，数据范围无限制）
+        setAuthentication(TEST_USERNAME, 0L, 0, null, null);
     }
 
-    // ==================== 辅助方法 ====================
+    @AfterEach
+    void tearDown() {
+        SecurityContextHolder.clearContext();
+    }
 
-    private SysUser createSysUser(String username, Long id) {
+    private void cleanupUser(String username) {
+        SysUser existing = sysUserService.lambdaQuery()
+                .eq(SysUser::getUsername, username)
+                .one();
+        if (existing != null) {
+            sysUserService.removeById(existing.getId());
+        }
+    }
+
+    private void setAuthentication(String username, Long userId, int level, Long clubId, Long deptId) {
+        SysUser sysUser = new SysUser();
+        sysUser.setId(userId);
+        sysUser.setUsername(username);
+        sysUser.setStatus(1);
+
+        LoginUserDetails loginUser = new LoginUserDetails(sysUser, authorService, level, clubId, deptId);
+        Authentication auth = new UsernamePasswordAuthenticationToken(
+                loginUser, null, loginUser.getAuthorities());
+        SecurityContextHolder.getContext().setAuthentication(auth);
+    }
+
+    // ==================== 注册 ====================
+    @Test
+    void testRegister_Success_WithUsername() {
+        RegisterDTO dto = new RegisterDTO();
+        dto.setUsername(TEST_USERNAME);
+        dto.setRealName("测试用户");
+        dto.setPassword(TEST_PASSWORD);
+        dto.setGender(1);
+        dto.setUserType(1);
+
+        sysUserService.register(dto);
+
+        SysUser saved = sysUserService.lambdaQuery()
+                .eq(SysUser::getUsername, TEST_USERNAME)
+                .one();
+        assertThat(saved).isNotNull();
+        assertThat(saved.getRealName()).isEqualTo("测试用户");
+        assertThat(saved.getStatus()).isEqualTo(1);
+        assertThat(saved.getPassword()).isNotEqualTo(TEST_PASSWORD);
+    }
+
+    @Test
+    void testRegister_Success_WithoutUsername() {
+        RegisterDTO dto = new RegisterDTO();
+        dto.setRealName("测试用户");
+        dto.setPassword(TEST_PASSWORD);
+        dto.setGender(1);
+        dto.setUserType(1);
+
+        sysUserService.register(dto);
+
+        SysUser saved = sysUserService.lambdaQuery()
+                .eq(SysUser::getUsername, "测试用户")
+                .one();
+        assertThat(saved).isNotNull();
+        assertThat(saved.getUsername()).isEqualTo("测试用户");
+    }
+
+    @Test
+    void testRegister_RealNameEmpty_ThrowsException() {
+        RegisterDTO dto = new RegisterDTO();
+        dto.setRealName("");
+        dto.setPassword(TEST_PASSWORD);
+
+        assertThatThrownBy(() -> sysUserService.register(dto))
+                .isInstanceOf(EIException.class)
+                .hasMessageContaining("密码或姓名为空");
+    }
+
+    @Test
+    void testRegister_PasswordEmpty_ThrowsException() {
+        RegisterDTO dto = new RegisterDTO();
+        dto.setRealName("测试用户");
+        dto.setPassword("");
+
+        assertThatThrownBy(() -> sysUserService.register(dto))
+                .isInstanceOf(EIException.class)
+                .hasMessageContaining("密码或姓名为空");
+    }
+
+    @Test
+    void testRegister_DuplicateUsername_ThrowsException() {
+        RegisterDTO dto = new RegisterDTO();
+        dto.setUsername(TEST_USERNAME);
+        dto.setRealName("测试用户");
+        dto.setPassword(TEST_PASSWORD);
+        sysUserService.register(dto);
+
+        RegisterDTO duplicate = new RegisterDTO();
+        duplicate.setUsername(TEST_USERNAME);
+        duplicate.setRealName("重复测试");
+        duplicate.setPassword(TEST_PASSWORD);
+
+        assertThatThrownBy(() -> sysUserService.register(duplicate))
+                .isInstanceOf(EIException.class);
+    }
+
+    // ==================== 分页查询 ====================
+    @Test
+    void testPageQuery_Success() {
         SysUser user = new SysUser();
-        user.setUsername(username);
-        user.setId(id);
-        return user;
-    }
+        user.setUsername(TEST_USERNAME);
+        user.setRealName("分页测试");
+        user.setStatus(1);
+        user.setUserType(1);
+        user.setPassword(TEST_PASSWORD);
+        sysUserService.saveUser(user);
 
-    // ==================== 测试 register ====================
+        Map<String, Object> param = new HashMap<>();
+        param.put("page", 1);
+        param.put("limit", 10);
 
-    @Test
-    void register_shouldSuccess_whenUsernameNotExist() {
-        try (MockedStatic<DataScopeHelper> ignored = mockStatic(DataScopeHelper.class)) {
-            RegisterDTO dto = new RegisterDTO();
-            dto.setUsername("testUser");
-            dto.setRealName("Real Name");
-            dto.setPassword("plainPassword");
-            dto.setGender(1);
-            dto.setUserType(2);
+        SysUser queryCond = new SysUser();
+        queryCond.setRealName("分页测试");
 
-            when(passwordEncoder.encode("plainPassword")).thenReturn("encodedPassword");
-            // 模拟用户名不存在：使用 any(QueryWrapper.class) 匹配实际传入的 LambdaQueryWrapper
-            when(sysUserMapper.selectOne(any(QueryWrapper.class))).thenReturn(null);
-
-            sysUserService.register(dto);
-
-            ArgumentCaptor<SysUser> captor = ArgumentCaptor.forClass(SysUser.class);
-            verify(sysUserMapper).insert(captor.capture());
-            SysUser saved = captor.getValue();
-            assertThat(saved.getUsername()).isEqualTo("testUser");
-            assertThat(saved.getPassword()).isEqualTo("encodedPassword");
-            assertThat(saved.getGender()).isEqualTo(1);
-            assertThat(saved.getUserType()).isEqualTo(2);
-            assertThat(saved.getStatus()).isEqualTo(1);
-        }
+        IPage<SysUserDTO> page = sysUserService.pageQuery(param, queryCond);
+        assertThat(page).isNotNull();
+        assertThat(page.getTotal()).isGreaterThanOrEqualTo(1);
     }
 
     @Test
-    void register_shouldUseRealNameAsUsername_whenUsernameNull() {
-        try (MockedStatic<DataScopeHelper> ignored = mockStatic(DataScopeHelper.class)) {
-            RegisterDTO dto = new RegisterDTO();
-            dto.setUsername(null);
-            dto.setRealName("RealNameOnly");
-            dto.setPassword("pass");
+    void testPageQuery_NoResult() {
+        Map<String, Object> param = new HashMap<>();
+        param.put("page", 1);
+        param.put("limit", 10);
 
-            when(passwordEncoder.encode("pass")).thenReturn("encoded");
-            // 不需要模拟 selectOne，因为 username 为 null 时不会执行重复性检查
+        SysUser queryCond = new SysUser();
+        queryCond.setRealName("不存在的名字XYZ");
 
-            sysUserService.register(dto);
-
-            ArgumentCaptor<SysUser> captor = ArgumentCaptor.forClass(SysUser.class);
-            verify(sysUserMapper).insert(captor.capture());
-            assertThat(captor.getValue().getUsername()).isEqualTo("RealNameOnly");
-        }
+        IPage<SysUserDTO> page = sysUserService.pageQuery(param, queryCond);
+        assertThat(page).isNotNull();
+        assertThat(page.getTotal()).isEqualTo(0);
     }
 
+    // ==================== 详情查询 ====================
     @Test
-    void register_shouldThrowException_whenUsernameExists() {
-        try (MockedStatic<DataScopeHelper> ignored = mockStatic(DataScopeHelper.class)) {
-            RegisterDTO dto = new RegisterDTO();
-            dto.setUsername("existing");
-            dto.setRealName("Real");
-            dto.setPassword("pass");
-
-            SysUser existing = createSysUser("existing", 1L);
-            when(sysUserMapper.selectOne(any(QueryWrapper.class))).thenReturn(existing);
-
-            assertThatThrownBy(() -> sysUserService.register(dto))
-                    .isInstanceOf(EIException.class)
-                    .hasFieldOrPropertyWithValue("code", ErrorConfig.RGEISTER_ADD_NEW_USER_CODE);
-            verify(sysUserMapper, never()).insert(any());
-        }
-    }
-
-    @Test
-    void register_shouldThrowException_whenRealNameOrPasswordEmpty() {
-        try (MockedStatic<DataScopeHelper> ignored = mockStatic(DataScopeHelper.class)) {
-            RegisterDTO dto1 = new RegisterDTO();
-            dto1.setUsername("user");
-            dto1.setRealName("");
-            dto1.setPassword("pass");
-
-            RegisterDTO dto2 = new RegisterDTO();
-            dto2.setUsername("user");
-            dto2.setRealName("Real");
-            dto2.setPassword("");
-
-            assertThatThrownBy(() -> sysUserService.register(dto1))
-                    .isInstanceOf(EIException.class)
-                    .hasFieldOrPropertyWithValue("code", ErrorConfig.RGEISTER_PASSWORD_OR_NAMEC_CODE);
-            assertThatThrownBy(() -> sysUserService.register(dto2))
-                    .isInstanceOf(EIException.class)
-                    .hasFieldOrPropertyWithValue("code", ErrorConfig.RGEISTER_PASSWORD_OR_NAMEC_CODE);
-            verify(sysUserMapper, never()).insert(any());
-        }
-    }
-
-    // ==================== 测试 pageQuery ====================
-
-    @Test
-    void pageQuery_shouldReturnMaskedDtoPage() {
-        try (MockedStatic<MPUtil> mpUtilMock = mockStatic(MPUtil.class);
-             MockedStatic<DataScopeHelper> dataScopeMock = mockStatic(DataScopeHelper.class);
-             MockedStatic<FieldMaskHelper> fieldMaskMock = mockStatic(FieldMaskHelper.class)) {
-
-            Map<String, Object> param = new HashMap<>();
-            param.put("current", 1);
-            param.put("size", 10);
-            SysUser condition = new SysUser();
-
-            Page<SysUser> mockPage = new Page<>(1, 10);
-            mpUtilMock.when(() -> MPUtil.getPage(param)).thenReturn(mockPage);
-            mpUtilMock.when(() -> MPUtil.sort(any(QueryWrapper.class), eq(param)))
-                    .thenAnswer(inv -> inv.getArgument(0));
-            mpUtilMock.when(() -> MPUtil.between(any(QueryWrapper.class), eq(param)))
-                    .thenAnswer(inv -> inv.getArgument(0));
-            mpUtilMock.when(() -> MPUtil.likeOrEq(any(QueryWrapper.class), eq(condition)))
-                    .thenAnswer(inv -> inv.getArgument(0));
-
-            dataScopeMock.when(() -> DataScopeHelper.applySysUserScope(any(QueryWrapper.class)))
-                    .thenAnswer(inv -> null);
-            dataScopeMock.when(DataScopeHelper::currentUser).thenReturn(mockViewer);
-
-            List<SysUser> entities = Arrays.asList(
-                    createSysUser("user1", 1L),
-                    createSysUser("user2", 2L)
-            );
-            IPage<SysUser> entityPage = new Page<>(1, 10, 2);
-            entityPage.setRecords(entities);
-            when(sysUserMapper.selectPage(eq(mockPage), any(QueryWrapper.class))).thenReturn(entityPage);
-
-            SysUserDTO dto1 = new SysUserDTO();
-            dto1.setUsername("user1");
-            SysUserDTO dto2 = new SysUserDTO();
-            dto2.setUsername("user2");
-            when(sysUserConverter.toDto(any(SysUser.class))).thenReturn(dto1, dto2);
-
-            IPage<SysUserDTO> result = sysUserService.pageQuery(param, condition);
-
-            assertThat(result.getRecords()).hasSize(2);
-            assertThat(result.getRecords().get(0).getUsername()).isEqualTo("user1");
-            fieldMaskMock.verify(() -> FieldMaskHelper.maskSysUserDto(any(SysUserDTO.class), eq(mockViewer)), times(2));
-        }
-    }
-
-    // ==================== 测试 getDetail ====================
-
-    @Test
-    void getDetail_shouldReturnMaskedDto_whenUserExists() {
-        try (MockedStatic<DataScopeHelper> dataScopeMock = mockStatic(DataScopeHelper.class);
-             MockedStatic<FieldMaskHelper> fieldMaskMock = mockStatic(FieldMaskHelper.class)) {
-
-            String username = "testUser";
-            SysUser entity = createSysUser(username, 1L);
-            when(sysUserConverter.selectByUsername(username)).thenReturn(entity);
-
-            SysUserDTO dto = new SysUserDTO();
-            dto.setUsername(username);
-            when(sysUserConverter.toDto(entity)).thenReturn(dto);
-
-            dataScopeMock.when(DataScopeHelper::currentUser).thenReturn(mockViewer);
-
-            SysUserDTO result = sysUserService.getDetail(username);
-            assertThat(result).isNotNull();
-            assertThat(result.getUsername()).isEqualTo(username);
-
-            fieldMaskMock.verify(() -> FieldMaskHelper.maskSysUserDto(dto, mockViewer), times(1));
-        }
-    }
-
-    @Test
-    void getDetail_shouldReturnNull_whenUserNotExist() {
-        when(sysUserConverter.selectByUsername(anyString())).thenReturn(null);
-        assertThat(sysUserService.getDetail("unknown")).isNull();
-    }
-
-    // ==================== 测试 saveUser ====================
-
-    @Test
-    void saveUser_shouldEncodePassword_whenPasswordNotNull() {
+    void testGetDetail_Success() {
         SysUser user = new SysUser();
-        user.setUsername("newUser");
-        user.setPassword("plain");
-        when(passwordEncoder.encode("plain")).thenReturn("encoded");
+        user.setUsername(TEST_USERNAME);
+        user.setRealName("详情测试");
+        user.setStatus(1);
+        user.setUserType(1);
+
+        user.setPassword(TEST_PASSWORD);
+        sysUserService.saveUser(user);
+
+        SysUserDTO dto = sysUserService.getDetail(TEST_USERNAME);
+        assertThat(dto).isNotNull();
+        assertThat(dto.getRealName()).isEqualTo("详情测试");
+    }
+
+    @Test
+    void testGetDetail_NotFound_ReturnsNull() {
+        SysUserDTO dto = sysUserService.getDetail("not_exist_user_99999");
+        assertThat(dto).isNull();
+    }
+
+    // ==================== 新增用户 ====================
+    @Test
+    void testSaveUser_WithPassword_Encoded() {
+        SysUser user = new SysUser();
+        user.setUsername(TEST_USERNAME);
+        user.setRealName("新增测试");
+        user.setPassword(TEST_PASSWORD);
+        user.setUserType(1);
+        user.setStatus(1);
 
         sysUserService.saveUser(user);
 
-        assertThat(user.getPassword()).isEqualTo("encoded");
-        verify(sysUserMapper).insert(user);
+        SysUser saved = sysUserService.lambdaQuery()
+                .eq(SysUser::getUsername, TEST_USERNAME)
+                .one();
+        assertThat(saved).isNotNull();
+        assertThat(saved.getPassword()).isNotEqualTo(TEST_PASSWORD);
     }
 
     @Test
-    void saveUser_shouldNotEncode_whenPasswordNull() {
+    void testSaveUser_WithoutPassword_SavedDirectly() {
         SysUser user = new SysUser();
-        user.setUsername("newUser");
-        user.setPassword(null);
+        user.setUsername(TEST_USERNAME);
+        user.setRealName("无密码测试");
+        user.setStatus(1);
 
         sysUserService.saveUser(user);
 
-        verify(passwordEncoder, never()).encode(any());
-        verify(sysUserMapper).insert(user);
+        SysUser saved = sysUserService.lambdaQuery()
+                .eq(SysUser::getUsername, TEST_USERNAME)
+                .one();
+        assertThat(saved).isNotNull();
+        assertThat(saved.getPassword()).isNull();
     }
 
-    // ==================== 测试 updateUsers ====================
+    // ==================== 批量更新 ====================
+    @Test
+    void testUpdateUsers_Success() {
+        SysUser user = new SysUser();
+        user.setUsername(TEST_USERNAME);
+        user.setRealName("原姓名");
+        user.setStatus(1);
+        user.setUserType(1);
+        user.setPassword(TEST_PASSWORD);
+        sysUserService.saveUser(user);
+
+        SysUser update = new SysUser();
+        update.setId(user.getId());
+        update.setRealName("新姓名");
+        update.setPhone("13800138000");
+
+        sysUserService.updateUsers(Arrays.asList(update));
+
+        SysUser updated = sysUserService.getById(user.getId());
+        assertThat(updated.getRealName()).isEqualTo("新姓名");
+        assertThat(updated.getPhone()).isEqualTo("13800138000");
+    }
 
     @Test
-    void updateUsers_shouldEncodeAndUpdateAll_whenInScope() {
-        try (MockedStatic<DataScopeHelper> dataScopeMock = mockStatic(DataScopeHelper.class)) {
-            SysUser user1 = createSysUser("user1", 1L);
-            user1.setPassword("pass1");
-            SysUser user2 = createSysUser("user2", 2L);
-            user2.setPassword("pass2");
-            List<SysUser> users = Arrays.asList(user1, user2);
+    void testUpdateUsers_WithPassword_Encoded() {
+        SysUser user = new SysUser();
+        user.setUsername(TEST_USERNAME);
+        user.setRealName("原姓名");
+        user.setStatus(1);
+        user.setPassword(TEST_PASSWORD);
+        sysUserService.saveUser(user);
 
-            // 模拟权限检查：每次 findInScope 都会调用 selectOne，返回对应的用户
-            when(sysUserMapper.selectOne(any(QueryWrapper.class)))
-                    .thenReturn(user1, user2);
+        SysUser update = new SysUser();
+        update.setId(user.getId());
+        update.setPassword(TEST_PASSWORD);
 
-            when(passwordEncoder.encode("pass1")).thenReturn("encoded1");
-            when(passwordEncoder.encode("pass2")).thenReturn("encoded2");
+        sysUserService.updateUsers(Arrays.asList(update));
 
-            // 关键：模拟 updateBatchById 避免 MyBatis-Plus 初始化异常
-            when(sysUserMapper.updateBatchById(anyList())).thenReturn(true);
+        SysUser updated = sysUserService.getById(user.getId());
+        assertThat(updated.getPassword()).isNotEqualTo(TEST_PASSWORD);
+    }
 
-            sysUserService.updateUsers(users);
-
-            assertThat(user1.getPassword()).isEqualTo("encoded1");
-            assertThat(user2.getPassword()).isEqualTo("encoded2");
-
-            // 验证 updateBatchById 被调用一次
-            verify(sysUserMapper, times(1)).updateBatchById(users);
+    // ==================== 批量删除 ====================
+    @Test
+    void testDeleteUsers_Success() {
+        for (int i = 1; i <= 3; i++) {
+            SysUser user = new SysUser();
+            user.setUsername(TEST_USERNAME + "_" + i);
+            user.setRealName("批量删除_" + i);
+            user.setStatus(1);
+            user.setPassword(TEST_PASSWORD);
+            sysUserService.saveUser(user);
         }
+
+        List<String> names = Arrays.asList(
+                TEST_USERNAME + "_1",
+                TEST_USERNAME + "_2",
+                TEST_USERNAME + "_3"
+        );
+        sysUserService.deleteUsers(names);
+
+        long count = sysUserService.lambdaQuery()
+                .in(SysUser::getUsername, names)
+                .count();
+        assertThat(count).isEqualTo(0);
     }
 
     @Test
-    void updateUsers_shouldThrowException_whenUserNotInScope() {
-        try (MockedStatic<DataScopeHelper> dataScopeMock = mockStatic(DataScopeHelper.class)) {
-            SysUser user1 = createSysUser("user1", 1L);
-            SysUser user2 = createSysUser("user2", 2L);
-            when(sysUserMapper.selectOne(any(QueryWrapper.class)))
-                    .thenReturn(user1)   // 第一个存在
-                    .thenReturn(null);   // 第二个不存在
-
-            assertThatThrownBy(() -> sysUserService.updateUsers(Arrays.asList(user1, user2)))
-                    .isInstanceOf(AccessDeniedException.class);
-            verify(sysUserMapper, never()).updateBatchById(anyList());
-        }
-    }
-
-    // ==================== 测试 deleteUsers ====================
-
-    @Test
-    void deleteUsers_shouldDeleteAll_whenAllInScope() {
-        try (MockedStatic<DataScopeHelper> dataScopeMock = mockStatic(DataScopeHelper.class)) {
-            List<String> names = Arrays.asList("user1", "user2");
-            when(sysUserMapper.selectOne(any(QueryWrapper.class)))
-                    .thenReturn(createSysUser("user1", 1L))
-                    .thenReturn(createSysUser("user2", 2L));
-
-            sysUserService.deleteUsers(names);
-
-            verify(sysUserMapper).deleteBatchIds(names);
-        }
-    }
-
-    @Test
-    void deleteUsers_shouldThrowException_whenOneNotInScope() {
-        try (MockedStatic<DataScopeHelper> dataScopeMock = mockStatic(DataScopeHelper.class)) {
-            List<String> names = Arrays.asList("user1", "user2");
-            when(sysUserMapper.selectOne(any(QueryWrapper.class)))
-                    .thenReturn(createSysUser("user1", 1L))
-                    .thenReturn(null);
-
-            assertThatThrownBy(() -> sysUserService.deleteUsers(names))
-                    .isInstanceOf(AccessDeniedException.class);
-            verify(sysUserMapper, never()).deleteBatchIds(any());
-        }
-    }
-
-    @Test
-    void deleteUsers_shouldDoNothing_whenNamesEmpty() {
+    void testDeleteUsers_EmptyList_DoesNothing() {
         sysUserService.deleteUsers(null);
-        sysUserService.deleteUsers(List.of());
-        verify(sysUserMapper, never()).deleteBatchIds(any());
+        sysUserService.deleteUsers(Arrays.asList());
+        // 无异常即通过
     }
 
-    // ==================== 测试 deleteByUsername ====================
-
+    // ==================== 按用户名删除 ====================
     @Test
-    void deleteByUsername_shouldCallMapperDelete() {
-        String username = "testUser";
-        sysUserService.deleteByUsername(username);
-        verify(sysUserMapper).deleteByUsername(username);
+    void testDeleteByUsername_Success() {
+        SysUser user = new SysUser();
+        user.setUsername(TEST_USERNAME);
+        user.setRealName("待删除");
+        user.setStatus(1);
+        user.setPassword(TEST_PASSWORD);
+        sysUserService.saveUser(user);
+
+        sysUserService.deleteByUsername(TEST_USERNAME);
+
+        SysUser deleted = sysUserService.lambdaQuery()
+                .eq(SysUser::getUsername, TEST_USERNAME)
+                .one();
+        assertThat(deleted).isNull();
     }
 
     @Test
-    void deleteByUsername_shouldDoNothing_whenUsernameNull() {
+    void testDeleteByUsername_NullOrEmpty_DoesNothing() {
         sysUserService.deleteByUsername(null);
-        verify(sysUserMapper, never()).deleteByUsername(any());
+        sysUserService.deleteByUsername("");
+        // 无异常即通过
+    }
+
+    @Test
+    void testDeleteByUsername_NotInScope_ThrowsException() {
+        SysUser user = new SysUser();
+        user.setUsername(TEST_USERNAME);
+        user.setRealName("越权删除测试");
+        user.setStatus(1);
+        user.setPassword(TEST_PASSWORD);
+        sysUserService.saveUser(user);
+
+        // 切换到普通用户（level=4，只能看自己），但目标不是自己
+        setAuthentication("other_user", 999L, 4, null, null);
+
+        assertThatThrownBy(() -> sysUserService.deleteByUsername(TEST_USERNAME))
+                .isInstanceOf(AccessDeniedException.class);
+    }
+
+    // ==================== 更新自己 ====================
+    @Test
+    void testUpdateUser_Success() {
+        SysUser user = new SysUser();
+        user.setUsername(TEST_USERNAME);
+        user.setRealName("原姓名");
+        user.setGender(0);
+        user.setPhone("13000000000");
+        user.setEmail("old@test.com");
+        user.setAvatar("old.jpg");
+        user.setStatus(1);
+        user.setUserType(1);
+        user.setPassword(TEST_PASSWORD);
+        sysUserService.saveUser(user);
+
+        // 使用与数据库一致的身份信息
+        setAuthentication(TEST_USERNAME, user.getId(), 0, null, null);
+
+        SysUser update = new SysUser();
+        update.setUsername(TEST_USERNAME);
+        update.setRealName("新姓名");
+        update.setGender(2);
+        update.setPhone("13800138000");
+        update.setEmail("new@test.com");
+        update.setAvatar("new.jpg");
+        // 恶意传入非白名单字段
+        update.setPassword("hacked_password");
+        update.setStatus(0);
+        update.setUserType(3);
+
+        sysUserService.updateUser(update);
+
+        SysUser updated = sysUserService.lambdaQuery()
+                .eq(SysUser::getUsername, TEST_USERNAME)
+                .one();
+        assertThat(updated.getRealName()).isEqualTo("新姓名");
+        assertThat(updated.getGender()).isEqualTo(2);
+        assertThat(updated.getPhone()).isEqualTo("13800138000");
+        assertThat(updated.getEmail()).isEqualTo("new@test.com");
+        assertThat(updated.getAvatar()).isEqualTo("new.jpg");
+        // 非白名单字段不应被修改
+        assertThat(updated.getPassword()).isNotEqualTo("hacked_password");
+        assertThat(updated.getStatus()).isEqualTo(1);
+        assertThat(updated.getUserType()).isEqualTo(1);
+    }
+
+    @Test
+    void testUpdateUser_NotLoggedIn_ThrowsException() {
+        SecurityContextHolder.clearContext();
+
+        SysUser update = new SysUser();
+        update.setUsername(TEST_USERNAME);
+
+        assertThatThrownBy(() -> sysUserService.updateUser(update))
+                .isInstanceOf(EIException.class)
+                .hasMessageContaining("未登录");
+    }
+
+    @Test
+    void testUpdateUser_NullUsername_ThrowsException() {
+        SysUser update = new SysUser();
+        update.setUsername(null);
+
+        assertThatThrownBy(() -> sysUserService.updateUser(update))
+                .isInstanceOf(EIException.class);
+    }
+
+    @Test
+    void testUpdateUser_EmptyUsername_ThrowsException() {
+        SysUser update = new SysUser();
+        update.setUsername("   ");
+
+        assertThatThrownBy(() -> sysUserService.updateUser(update))
+                .isInstanceOf(EIException.class);
+    }
+
+    @Test
+    void testUpdateUser_UserNotFound_ThrowsException() {
+        setAuthentication(TEST_USERNAME, 999L, 0, null, null);
+
+        SysUser update = new SysUser();
+        update.setUsername("not_exist_user_99999");
+
+        assertThatThrownBy(() -> sysUserService.updateUser(update))
+                .isInstanceOf(EIException.class);
+    }
+
+    @Test
+    void testUpdateUser_UpdateOther_ThrowsException() {
+        SysUser target = new SysUser();
+        target.setUsername(TEST_USERNAME);
+        target.setRealName("目标用户");
+        target.setStatus(1);
+        target.setPassword(TEST_PASSWORD);
+        sysUserService.saveUser(target);
+
+        // 当前登录用户是其他人
+        setAuthentication("other_user", 888L, 0, null, null);
+
+        SysUser update = new SysUser();
+        update.setUsername(TEST_USERNAME);
+        update.setRealName("恶意修改");
+
+        assertThatThrownBy(() -> sysUserService.updateUser(update))
+                .isInstanceOf(EIException.class)
+                .hasMessageContaining("权限不足");
     }
 }
